fixed modal list alignment issue

--- a/style.css
+++ b/style.css
@@ -147,18 +147,20 @@ h3{
     grid-column: 2 / span 2;
     display: flex;
     flex-direction: row;
-    align-items: space-around;
 }
 
 .list {
+    width: 25%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     margin: 0 2%;
+    text-align: left;
 }
 
 .list ul {
-    margin: 1%
+    margin: 1%;
+    padding-inline-start: 9%;
 }
 
 .list h4 {
